<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.VehicleUpdateFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/form_update_vehicle_title"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/form_vinNumber_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_vin_car"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/form_brand_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_Brand_car"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/form_series_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_serie_car"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/form_type_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_type_car"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/form_engine_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_motor_car"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_update" />

</LinearLayout>