<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRepair_Vehicle_Serial_Number"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/main_repair_page_vehicle_serial_number_LABEL" />

            <TextView
                android:id="@+id/Repair_Vehicle_Serial_Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_repair_page_vehicle_serial_number"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRepair_Status"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_repair_page_repair_status_LABEL" />

            <TextView
                android:id="@+id/Repair_Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_repair_page_repair_status"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRepair_client"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_repair_page_client_LABEL" />


            <TextView
                android:id="@+id/Repair_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_repair_page_client"
                android:textAppearance="?attr/textAppearanceHeadline6" />


        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>