<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="20dp"
tools:context="cr.una.example.frontend_car_service_app.view.VehicleDetailsFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblVIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/vehicle_vin"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtVehicleVIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/lblSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/vehicle_serial_number"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtVehicleSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="34sp" />
        <TextView
            android:id="@+id/lblBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/vehicle_brand"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtVehicleBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="34sp" />
        <TextView
            android:id="@+id/lblCarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/vehicle_car_type"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtVehicleCarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="34sp" />
        <TextView
            android:id="@+id/lblEngineType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/vehicle_engine_type"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtVehicleEngineType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="34sp" />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/colorWarning"
            android:text="@string/action_delete_vehicle" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/colorUpdate"
            android:text="@string/action_update_vehicle" />

    </LinearLayout>

</LinearLayout>

</LinearLayout>